Fix z-index

--- a/app/styles/components/dialog.css
+++ b/app/styles/components/dialog.css
@@ -4,7 +4,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 100;
+  z-index: var(--z-index-dialog);
   overflow-x: hidden;
   overflow-y: auto;
   outline: 0;
